--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-}
-
-.main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(30, 30, 46);
-  min-height: 100vh;
-  color: #fff;
-}
-
-.terminal {
-  background-color: rgba(17, 17, 27, .8);
-  padding: 1em;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.list {
-  margin: 1em 2em;
-}
-
-.list ul {
-  list-style: none;
-  padding: 0;
-}
-
-.list h3 {
-  margin: .5em;
-  color: #89b4fa;
-}
-
-.list li a {
-  color: #fff;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
